# weightwatcher

./: COPYRIGHT  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
debian/: changelog
man/: Makefile.in
software/weightwatcher/: AUTHORS  ChangeLog  HISTORY  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac  weightwatcher.spec.in
software/weightwatcher/man/: Makefile.in  ww.1  ww.1.in
software/weightwatcher/src/: Makefile.am  Makefile.in  define.h  field.c  field.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  readimage.c  readimage.h  types.h  vector.c  vector.h  xml.c  xml.h
software/weightwatcher/src/fits/: Makefile.in
software/weightwatcher/src/wcs/: Makefile.in
software/weightwatcher/xsl/: ww.xsl
softwareTERAPIX/weightwatcher/: AUTHORS  BUGS  Makefile.in  TODO  acx_prog_cc_optim.m4  configure  configure.ac
softwareTERAPIX/weightwatcher-1.7/: ChangeLog  HISTORY  Makefile.in  THANKS  acx_prog_cc_optim.m4  config.h.in  configure  configure.ac
softwareTERAPIX/weightwatcher-1.7/man/: Makefile.am  ww.1  ww.x
softwareTERAPIX/weightwatcher-1.7/src/: Makefile.in  field.c  makeit.c  preflist.h  prefs.h  readimage.c  readimage.h  types.h  vector.c
softwareTERAPIX/weightwatcher/man/: Makefile.in  ww.1
softwareTERAPIX/weightwatcher/src/: Makefile.in  field.c  field.h  key.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  readimage.c  vector.c  vector.h
softwareTERAPIX/weightwatcher/src/fits/: fitscat.h
src/: Makefile.in  define.h  globals.h  preflist.h  prefs.h  readimage.c  types.h  vector.c  xml.c
tags/1.12/: Makefile.am  Makefile.in  README  THANKS  aclocal.m4
tags/1.12/man/: Makefile.am  ww.1.in
tags/1.12/src/: Makefile.in  define.h  field.c  field.h  globals.h  makeit.c  prefs.c  vector.c  vector.h  xml.c  xml.h
tags/1.12/xsl/: ww.xsl
tags/1.8.10/: COPYRIGHT  Makefile.in  THANKS  weightwatcher.spec.in
tags/1.8.10/src/: Makefile.in  field.c  key.h  readimage.c  xml.h
trunk/: ChangeLog  HISTORY  Makefile.am  Makefile.in  acx_prog_cc_optim.m4  config.h.in  configure  configure.ac  weightwatcher.spec.in
trunk/debian/: control
trunk/man/: Makefile.in  ww.1.in
trunk/src/: Makefile.am  main.c  readimage.h
trunk/src/wcs/: Makefile.in
trunk/xsl/: ww.xsl
xsl/: ww.xsl
